# stock_prices

./: .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 505536f642ec_init.py  67f49cdd66f3_initial_migration.py  e0e440c4486d_initial_migration.py
static/: price_tracker.js
static/templates/: home.html
stock_prices/: app.py  asgi.py  cli.py  db.py  models.py  settings.py  views.py
tests/: test_app.py
