[tool.poetry]
name = "stock_prices"
version = "0.1.0"
description = ""
authors = ["Sergey Perminov"]

[tool.poetry.scripts]
stock-price = 'stock_prices.cli:app'

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
fastapi = "^0.75.0"
SQLAlchemy = "^1.4.32"
pydantic = "^1.9.0"
Jinja2 = "^3.1.1"
starlette = "^0.17.1"
typer = "^0.4.0"
click = ">=7.1.1, <8.1.0"
alembic = "^1.7.7"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"
flake8-awesome = "^1.3.0"
mypy = "^0.942"
unify = "^0.5"
typing-extensions = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
